[tool.poetry]
name = "strike"
version = "0.1.0"
description = ""
authors = ["Aleksei Khatkevich <qwerty12345@disroot.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "> 0.95 < 1.0"
uvicorn = "0.22.*"
uvloop = "0.17.*"
httptools = "0.5.*"
sqlalchemy = "2.0.*"
orjson = "3.*"
asyncpg = "0.27.*"
alembic = "^1.11"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0"
bcrypt = "4.*"
pyjwt = {extras = ["crypto"], version = "2.*"}
yarl = "1.9.*"
aiofiles = "23.*"


[tool.poetry.group.dev.dependencies]
pytest-env = "*"
pytest = "7.3.*"
pytest-randomly = "*"
httpx = "0.24.*"
pytest-asyncio = "*"
factory-boy = "*"
pytest-factoryboy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
